# shap-monitor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  publish.yml  test-numpy1.yml
docs/: gen_ref_pages.py  index.md
docs/api/: analysis.md  backends.md  index.md  monitor.md  types.md
docs/development/: contributing.md  index.md  roadmap.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/user-guide/: analysis.md  backends.md  examples.md  index.md  monitoring.md
examples/: demo_lightgbm.py  example.ipynb  lightgbm_example.ipynb
scripts/: make_demo_data.py  time_help.py
shapmonitor/: __init__.py  __main__.py  monitor.py  types.py
shapmonitor/analysis/: __init__.py  _analyzer.py  metrics.py
shapmonitor/backends/: __init__.py  _base.py  _factory.py  _parquet.py
shapmonitor/cli/: __init__.py  __main__.py  _common.py  _watch_app.py  log.py  report.py  watch.py
talks/pytexas-2026/: 01_before_argparse.py  02_typer_no_rich.py  README.md  sample_command.sh
talks/pytexas-2026/recordings/: 01_argparse.cast  02_typer_help.cast  (+6 more)
tests/: conftest.py  test_cli.py  test_cli_extended.py  test_imports.py  test_monitor.py
tests/analysis/: test_adversarial.py  test_analyzer.py  test_compare_versions.py  test_metrics.py
tests/backend/: test_parquet.py  test_parquet_errors.py
tests/explainers/: __init__.py  test_base_explainer.py  test_linear_explainer.py  test_tree_explainer.py
(+1 files in other folders)
