[project]
name = "shap-monitor"
version = "0.1.0"
description = "A monitoring tool for SHAP values in machine learning models."
license = {text = "Apache-2.0"}
authors = [
    {name = "Avik Basu", email = "avikbasu93@gmail.com"}
]
maintainers = [
    {name = "Avik Basu", email = "avikbasu93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shap (>=0.50.0,<0.51.0)",
    "numpy (>=2.0.0,<3.0.0)"
]


[tool.poetry]
packages = [{include = "shapmonitor"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"